assets/css/style.css
/* ... */
/* ########## re-usable id's and classes accross excercise pages ##########  */



/* ########## CHEST ########## */

/* background */

.chest-background-blue {
    background-color: #004AAD;
    width: 100%;
    height: 80rem;

    position: absolute;
    top: 0px;
    z-index: -1;
}

/* chest top section */

#chest-top {
    display: flex;
    margin-top: 30px;
    position: relative;
    left: -0.5rem;
}

.chest-img-container {
    width: 60%;
    height: 370px;
    overflow: hidden;
    border: 3px solid #FA7C07;
    border-radius: 10px;
}

.chest-img-container img {
    width: 100%;
}

#chest-header-outer {
    width: 40%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#chest-header {
    width: 80%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

#chest-header h1 {
    font-size: 120%;
    font-family: 'Roboto Slab', serif;
    font-size: 500%;
    color: #F5F5F5;

}

.chest-orange {
    color: #FA7C07;
}

/* chest top section - responsive max-width 1100px */

@media only screen and (max-width: 1100px) {

    #chest-top {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin-top: 10px;
        left: 0;
    }

    .chest-img-container {
        width: 90%;
    }

    #chest-header-outer {
        width: 88%;
        height: 5.5rem;
        position: absolute;
        display: flex;
        justify-content: center;
        align-items: center;
        top: 272px;
        background-color: rgba(73, 73, 73, 0.95);
        border-radius: 7px;
    }

    #chest-header {
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
        text-align: center;
    }

}

/* chest top section - responsive max-width 750px */

@media only screen and (max-width: 750px) {

    .chest-img-container {
        height: 14rem;
    }

    #chest-header-outer {
        height: 2.5rem;
        top: 179px;
    }

    #chest-header h1 {
        font-size: 200%;
    }

    .chest-background-blue {
        background-color: #004AAD;
        width: 100%;
        height: 96rem;
    
        position: absolute;
        top: 0px;
        z-index: -1;
    }

}

/* chest exercise section */

/* into to chest */

#chest-exercises {
    margin: 40px 0 0 0;
    width: 100%;
    height: 35rem;

    display: flex;
    flex-direction: column;
    align-items: center;
}

/* chest table content */

.chest-exercise-intro {
    width: 90%;
    padding: 0 15px;
    background-color: #F5F5F5;
    border: 3px solid #FA7C07;
    color: #004AAD;
}

.chest-exercises-container {
    display: flex;
    width: 90%;
    margin-top: 10px;
}

.chest-compound {
    width: 50%;
    padding: 0;
    margin-right: 5px;
    background-color: #F5F5F5;
    border: 3px solid #FA7C07;
    color: #004AAD;
}

.chest-isolation {
    width: 50%;
    margin-left: 5px;
    padding: 0;
    background-color: #F5F5F5;
    border: 3px solid #FA7C07;
    color: #004AAD;
}

.chest-exercises-container h3 {
    text-align: center;
    font-size: 130%;
    width: 207px;
    margin: 0 0 15px 0;
}


.chest-exercises-container a {
    text-align: center;
    font-size: 120%;
    color: #004AAD;
}

.chest-exercises-container a:hover {
    color: #FA7C07;
}

.comp-iso-diff {
    display: flex;
    justify-content: center;
}

.header-block {
    border-bottom: 3px solid #FA7C07;
    width: 100%;
    margin: 0;
    padding: 10px 5px;
    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;

}

.exercise-block p {
    padding-left: 10px;
    font-size: 120%;
}

.exercise-block ul {
    list-style: none;
    padding-left: 20px;
}

.exercise-block a {
    text-decoration: none;
    line-height: 150%;
}

/* chest exercises section - responsive max-width 750px */

@media only screen and (max-width: 750px) {
    
    
    
    .chest-exercises-container {
        flex-direction: column;
    }

    .chest-compound {
        width: 100%;
        margin: 0 0 10px 0;
    }

    .chest-isolation {
        width: 100%;
        margin: 0;
        justify-content: center;
        align-items: center;
    }
}

/* call to action fpr muscle pages */

.cta-container {

    margin-top: 20px;
    width: 100%;
    height: 260px;
    display: flex;
    justify-content: center;
    align-items: center;

}

.call-to-action-muscle-pages {
    font-size: 180%;
    font-family: Arial, Helvetica, sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    display: flex;
    justify-content: center;
    align-items: center;

    width: 300px;
    height: 60px;
    border-radius: 10px;
    border: .5px solid white;

    background-color: #FA7C07;

}

.call-to-action-muscle-pages a {
    width: 100%;
    height: 60px;
    text-decoration: none;
    color: white;
    font-weight: 900;
    text-shadow: -1px 0 #004AAD, 0 1px #004AAD, 1px 0 #004AAD, 0 -1px #004AAD;

    display: flex;
    justify-content: center;
    align-items: center;
}

.call-to-action-muscle-pages:hover {
    background-color: #F5F5F5;
    border: 3px solid #FA7C07;
}

.call-to-action-muscle-pages a:hover {
    color: #FA7C07;
}

/* ########## SHOULDERS ########## */

/* background */

/* background */

.background-orange {
    background-color: #FA7C07;
    width: 100%;
    height: 80rem;

    position: absolute;
    top: 0px;
    z-index: -1;
}

.chest-orange {
    color: #004AAD;
}

.call-to-action-muscle-pages-orange-bg {
    font-size: 180%;
    font-family: Arial, Helvetica, sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    display: flex;
    justify-content: center;
    align-items: center;

    width: 300px;
    height: 60px;
    border-radius: 10px;
    border: .5px solid white;

    background-color: #004AAD;

}
/* ... */

